[gd_scene load_steps=4 format=2]

[ext_resource path="res://Effects/FadingText.gd" type="Script" id=1]
[ext_resource path="res://Resources/TypeFaces/dotty.regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 2 )

[node name="FadingText" type="Node"]
script = ExtResource( 1 )

[node name="TextToFade" type="Label" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 1 )
text = "place holder"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeLeftToLive" type="Timer" parent="."]
wait_time = 0.5
[connection signal="timeout" from="TimeLeftToLive" to="." method="_on_TimeLeftToLive_timeout"]
